--- a/.github/workflows/foo.yml
+++ b/.github/workflows/foo.yml
@@ -17,4 +17,4 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-      - run: python -c "print('foo')"
+      - run: python -c "import localtileserver"
